--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -17,12 +17,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cVz-JP-Igz">
-                                <rect key="frame" x="16" y="56" width="343" height="503"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cVz-JP-Igz">
+                                <rect key="frame" x="16" y="56" width="343" height="426"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="dge-RM-wBU" id="7Ds-Ln-79b"/>
+                                </connections>
                             </textView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Dah-aV-FgL">
                                 <rect key="frame" x="16" y="20" width="343" height="29"/>
@@ -34,16 +38,25 @@
                                     <action selector="segmentClicked:" destination="dge-RM-wBU" eventType="valueChanged" id="uPb-Xj-ju1"/>
                                 </connections>
                             </segmentedControl>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VbH-u1-RgG">
+                                <rect key="frame" x="153" y="518" width="70" height="30"/>
+                                <state key="normal" title="Export file"/>
+                                <connections>
+                                    <action selector="exportFile" destination="dge-RM-wBU" eventType="touchUpInside" id="n7g-aD-nwO"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="cVz-JP-Igz" firstAttribute="top" secondItem="Dah-aV-FgL" secondAttribute="bottom" constant="8" id="4fM-jb-ciE"/>
-                            <constraint firstItem="VQF-69-hM9" firstAttribute="bottom" secondItem="cVz-JP-Igz" secondAttribute="bottom" id="RjM-9A-cWp"/>
+                            <constraint firstItem="cVz-JP-Igz" firstAttribute="trailing" secondItem="Dah-aV-FgL" secondAttribute="trailing" id="9Hi-1B-mAg"/>
+                            <constraint firstItem="VbH-u1-RgG" firstAttribute="centerX" secondItem="VQF-69-hM9" secondAttribute="centerX" id="BBD-CK-aXp"/>
+                            <constraint firstItem="VbH-u1-RgG" firstAttribute="top" secondItem="cVz-JP-Igz" secondAttribute="bottom" constant="36" id="Ldn-13-Ets"/>
+                            <constraint firstItem="VQF-69-hM9" firstAttribute="bottom" secondItem="VbH-u1-RgG" secondAttribute="bottom" constant="11" id="Udd-Kf-ORF"/>
                             <constraint firstItem="Dah-aV-FgL" firstAttribute="top" secondItem="VQF-69-hM9" secondAttribute="top" constant="20" id="WJ7-jZ-Tim"/>
                             <constraint firstItem="VQF-69-hM9" firstAttribute="trailing" secondItem="Dah-aV-FgL" secondAttribute="trailing" constant="16" id="Wzw-6j-2nF"/>
                             <constraint firstItem="Dah-aV-FgL" firstAttribute="leading" secondItem="VQF-69-hM9" secondAttribute="leading" constant="16" id="YNp-6X-5fa"/>
-                            <constraint firstItem="cVz-JP-Igz" firstAttribute="leading" secondItem="VQF-69-hM9" secondAttribute="leading" constant="16" id="kq0-oP-lgv"/>
-                            <constraint firstItem="VQF-69-hM9" firstAttribute="trailing" secondItem="cVz-JP-Igz" secondAttribute="trailing" constant="16" id="vvO-1h-WCr"/>
+                            <constraint firstItem="cVz-JP-Igz" firstAttribute="leading" secondItem="Dah-aV-FgL" secondAttribute="leading" id="Z6o-7k-Pfi"/>
+                            <constraint firstItem="cVz-JP-Igz" firstAttribute="top" secondItem="Dah-aV-FgL" secondAttribute="bottom" constant="8" symbolic="YES" id="u2P-gu-xcN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VQF-69-hM9"/>
                     </view>
@@ -111,8 +124,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="559"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sH5-ft-0le">
-                                <rect key="frame" x="16" y="64" width="343" height="559"/>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sH5-ft-0le">
+                                <rect key="frame" x="16" y="64" width="343" height="495"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -129,7 +142,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="34x-Hq-4GP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1097" y="663"/>
+            <point key="canvasLocation" x="1096.8" y="662.51874062968523"/>
         </scene>
         <!--Add Files Selection Controller-->
         <scene sceneID="97X-W9-p3y">
