No more OzyTableViewController & Possible with true dynamic sizing of table

--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -125,7 +125,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="sH5-ft-0le">
-                                <rect key="frame" x="16" y="64" width="343" height="495"/>
+                                <rect key="frame" x="16" y="0.0" width="343" height="559"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
@@ -137,7 +137,7 @@
                         <viewLayoutGuide key="safeArea" id="zzy-Si-3Lm"/>
                     </view>
                     <connections>
-                        <outlet property="_textView" destination="sH5-ft-0le" id="w4F-rY-zG7"/>
+                        <outlet property="textView" destination="sH5-ft-0le" id="9iv-6f-gKF"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="34x-Hq-4GP" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -255,6 +255,7 @@
                             <outlet property="delegate" destination="yKV-vJ-ur4" id="4gZ-QL-qrA"/>
                         </connections>
                     </tableView>
+                    <extendedEdge key="edgesForExtendedLayout"/>
                     <toolbarItems>
                         <barButtonItem systemItem="edit" id="dz3-P4-gwo">
                             <connections>
