Using sharing sheet instead of document picker when exporting feed (making it possible to e.g. mail the file directly)

--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="153" y="518" width="70" height="30"/>
                                 <state key="normal" title="Export file"/>
                                 <connections>
-                                    <action selector="exportFile" destination="dge-RM-wBU" eventType="touchUpInside" id="n7g-aD-nwO"/>
+                                    <action selector="exportFile:" destination="dge-RM-wBU" eventType="touchUpInside" id="ER3-Af-Zyb"/>
                                 </connections>
                             </button>
                         </subviews>
