--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -149,15 +149,15 @@
             <objects>
                 <tableViewController id="xKh-gw-umc" customClass="AddFilesSelectionController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="iXs-CS-HYn">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AddFilesCell" id="qtH-4l-Jc9">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <rect key="frame" x="0.0" y="28" width="300" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qtH-4l-Jc9" id="DUd-wP-6gi">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="300" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -167,6 +167,7 @@
                             <outlet property="delegate" destination="xKh-gw-umc" id="EEb-EK-yxW"/>
                         </connections>
                     </tableView>
+                    <size key="freeformSize" width="300" height="300"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1LY-HY-UVo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -295,6 +296,67 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AqZ-bX-mkz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1741.5999999999999" y="-107.49625187406298"/>
+        </scene>
+        <!--Item Preference Controller-->
+        <scene sceneID="7nu-5V-qDP">
+            <objects>
+                <viewController storyboardIdentifier="ItemPreferences" id="hb6-tD-iwR" customClass="ItemPreferenceController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="JVr-72-8qV">
+                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4Bc-jA-fAd">
+                                <rect key="frame" x="67" y="20" width="167" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="167" id="maP-Hy-D5B"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Table"/>
+                                    <segment title="Simple"/>
+                                    <segment title="Links"/>
+                                </segments>
+                                <connections>
+                                    <action selector="viewSelectionChanged:" destination="hb6-tD-iwR" eventType="valueChanged" id="amF-eM-yUE"/>
+                                </connections>
+                            </segmentedControl>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show hidden" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J8z-Yz-0yG">
+                                <rect key="frame" x="16" y="69" width="100" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="C8G-YH-IP6">
+                                <rect key="frame" x="126" y="64" width="51" height="31"/>
+                                <accessibility key="accessibilityConfiguration" label="Show hidden">
+                                    <accessibilityTraits key="traits" button="YES"/>
+                                </accessibility>
+                                <connections>
+                                    <action selector="showHiddenChanged:" destination="hb6-tD-iwR" eventType="valueChanged" id="MLu-Nu-488"/>
+                                </connections>
+                            </switch>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="J8z-Yz-0yG" firstAttribute="leading" secondItem="R9C-d1-WF3" secondAttribute="leading" constant="16" id="BMq-Hi-F22"/>
+                            <constraint firstItem="C8G-YH-IP6" firstAttribute="top" secondItem="4Bc-jA-fAd" secondAttribute="bottom" constant="16" id="FAk-pe-yjH"/>
+                            <constraint firstItem="4Bc-jA-fAd" firstAttribute="centerX" secondItem="R9C-d1-WF3" secondAttribute="centerX" id="Orc-iy-vcC"/>
+                            <constraint firstItem="C8G-YH-IP6" firstAttribute="leading" secondItem="J8z-Yz-0yG" secondAttribute="trailing" constant="10" id="OzL-Mk-0f3"/>
+                            <constraint firstItem="J8z-Yz-0yG" firstAttribute="top" secondItem="4Bc-jA-fAd" secondAttribute="bottom" constant="21" id="f4g-xz-bBf"/>
+                            <constraint firstItem="4Bc-jA-fAd" firstAttribute="top" secondItem="R9C-d1-WF3" secondAttribute="top" constant="20" id="i63-Rc-fDR"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="R9C-d1-WF3"/>
+                    </view>
+                    <extendedEdge key="edgesForExtendedLayout"/>
+                    <value key="contentSizeForViewInPopover" type="size" width="300" height="300"/>
+                    <size key="freeformSize" width="300" height="300"/>
+                    <connections>
+                        <outlet property="showHidden" destination="C8G-YH-IP6" id="Cjs-tf-ErR"/>
+                        <outlet property="viewSelection" destination="4Bc-jA-fAd" id="Z3u-sW-GA4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Oni-In-iei" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3174" y="-461"/>
         </scene>
         <!--Details Pages Controller-->
         <scene sceneID="p4N-7S-fE5">
