--- a/css/bluedream.css
+++ b/css/bluedream.css
@@ -1,3 +1,11 @@
+
+img {
+    max-width:100%;
+}
+
+video {
+    max-width:100%;
+}
 table { background:#D3E4E5;
  border:1px solid gray;
  border-collapse:collapse;
