--- a/css/seaglass.css
+++ b/css/seaglass.css
@@ -1,3 +1,11 @@
+
+img {
+    max-width:100%;
+}
+
+video {
+    max-width:100%;
+}
 table { border-collapse: collapse; 
 border: 1px solid #839E99; 
 background: #EEEEEE;
