--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -540,10 +540,10 @@
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="rjU-fP-8VN">
                                 <rect key="frame" x="17" y="130" width="267" height="29"/>
                                 <segments>
-                                    <segment title="UTF8"/>
-                                    <segment title="Unicode"/>
-                                    <segment title="Latin1"/>
-                                    <segment title="Mac"/>
+                                    <segment title="1"/>
+                                    <segment title="2"/>
+                                    <segment title="3"/>
+                                    <segment title="4"/>
                                 </segments>
                                 <connections>
                                     <action selector="somethingChanged:" destination="IQ9-ZV-OyJ" eventType="valueChanged" id="JlB-l4-Jg9"/>
