--- a/Storyboards/Main.storyboard
+++ b/Storyboards/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HMm-SB-a07">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HMm-SB-a07">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -421,56 +421,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="L2G-nr-gi1">
-                                <rect key="frame" x="233" y="20" width="51" height="31"/>
-                                <connections>
-                                    <action selector="somethingChanged:" destination="lMs-RE-JYJ" eventType="valueChanged" id="ToS-xQ-8IK"/>
-                                </connections>
-                            </switch>
-                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rc4-nI-R1N">
-                                <rect key="frame" x="233" y="97" width="51" height="31"/>
-                                <connections>
-                                    <action selector="somethingChanged:" destination="lMs-RE-JYJ" eventType="valueChanged" id="aHz-Zw-amn"/>
-                                </connections>
-                            </switch>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ujt-CK-5s1">
-                                <rect key="frame" x="233" y="59" width="51" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="51" id="Usg-Tg-Zhx"/>
-                                </constraints>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
-                                <connections>
-                                    <action selector="somethingChanged:" destination="lMs-RE-JYJ" eventType="editingDidEnd" id="SBO-Nh-7ON"/>
-                                </connections>
-                            </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rfe-Ye-pNd">
-                                <rect key="frame" x="17" y="25" width="109" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password timeout" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="weW-4Z-z7b">
-                                <rect key="frame" x="16" y="64" width="137" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Synchronize files" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cba-MZ-8zb">
-                                <rect key="frame" x="16" y="102" width="130" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File reload" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipr-y3-8kt">
-                                <rect key="frame" x="111" y="148" width="79" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Refresh time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipr-y3-8kt">
+                                <rect key="frame" x="101.5" y="148" width="97" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="time" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="gBR-8n-YBS">
-                                <rect key="frame" x="17" y="177" width="265" height="43"/>
+                                <rect key="frame" x="17" y="177" width="264" height="43"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="43" id="gPb-fz-qNN"/>
                                 </constraints>
@@ -481,36 +439,36 @@
                                     <action selector="somethingChanged:" destination="lMs-RE-JYJ" eventType="valueChanged" id="5zx-so-VO0"/>
                                 </connections>
                             </datePicker>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZWA-MD-FE0">
+                                <rect key="frame" x="237" y="20" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="somethingChanged:" destination="lMs-RE-JYJ" eventType="valueChanged" id="P3E-EX-4oo"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Automated refresh" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4L4-iK-a96">
+                                <rect key="frame" x="17" y="25" width="143" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="weW-4Z-z7b" firstAttribute="leading" secondItem="lIB-Uc-ICq" secondAttribute="leading" constant="16" id="5cm-KQ-U4q"/>
                             <constraint firstItem="gBR-8n-YBS" firstAttribute="leading" secondItem="lIB-Uc-ICq" secondAttribute="leading" constant="17" id="9Ja-1P-Rpc"/>
-                            <constraint firstItem="cba-MZ-8zb" firstAttribute="leading" secondItem="lIB-Uc-ICq" secondAttribute="leading" constant="16" id="ARf-fj-gmB"/>
-                            <constraint firstItem="weW-4Z-z7b" firstAttribute="top" secondItem="rfe-Ye-pNd" secondAttribute="bottom" constant="18" id="Bhg-jJ-lWq"/>
-                            <constraint firstItem="L2G-nr-gi1" firstAttribute="top" secondItem="lIB-Uc-ICq" secondAttribute="top" constant="20" id="C9l-u2-m5G"/>
                             <constraint firstItem="gBR-8n-YBS" firstAttribute="centerX" secondItem="Ipr-y3-8kt" secondAttribute="centerX" constant="-1" id="Cn2-66-Mlk"/>
-                            <constraint firstItem="rfe-Ye-pNd" firstAttribute="leading" secondItem="lIB-Uc-ICq" secondAttribute="leading" constant="17" id="Cp8-ZJ-lrV"/>
-                            <constraint firstItem="cba-MZ-8zb" firstAttribute="top" secondItem="weW-4Z-z7b" secondAttribute="bottom" constant="17" id="Hwe-yM-Dpr"/>
                             <constraint firstItem="Ipr-y3-8kt" firstAttribute="centerX" secondItem="lIB-Uc-ICq" secondAttribute="centerX" id="YPz-Tf-J67"/>
-                            <constraint firstItem="Rc4-nI-R1N" firstAttribute="top" secondItem="ujt-CK-5s1" secondAttribute="bottom" constant="8" id="Zo7-ek-b8F"/>
-                            <constraint firstItem="lIB-Uc-ICq" firstAttribute="trailing" secondItem="L2G-nr-gi1" secondAttribute="trailing" constant="18" id="bcq-Ni-TY1"/>
-                            <constraint firstItem="lIB-Uc-ICq" firstAttribute="trailing" secondItem="ujt-CK-5s1" secondAttribute="trailing" constant="16" id="g2Q-6h-5rb"/>
                             <constraint firstItem="Ipr-y3-8kt" firstAttribute="top" secondItem="lIB-Uc-ICq" secondAttribute="top" constant="148" id="lc2-N4-DAq"/>
                             <constraint firstItem="gBR-8n-YBS" firstAttribute="top" secondItem="Ipr-y3-8kt" secondAttribute="bottom" constant="8" id="mi7-9b-8e1"/>
-                            <constraint firstItem="rfe-Ye-pNd" firstAttribute="top" secondItem="lIB-Uc-ICq" secondAttribute="top" constant="25" id="nOx-eF-koT"/>
-                            <constraint firstItem="lIB-Uc-ICq" firstAttribute="trailing" secondItem="Rc4-nI-R1N" secondAttribute="trailing" constant="18" id="pXb-L4-dva"/>
-                            <constraint firstItem="ujt-CK-5s1" firstAttribute="top" secondItem="L2G-nr-gi1" secondAttribute="bottom" constant="8" id="qjT-bF-pyf"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="lIB-Uc-ICq"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="App" id="Gds-oU-haA"/>
                     <size key="freeformSize" width="300" height="300"/>
                     <connections>
-                        <outlet property="passwordTimeout" destination="ujt-CK-5s1" id="d80-Si-hMq"/>
-                        <outlet property="reloadTime" destination="gBR-8n-YBS" id="XQl-aA-vZ1"/>
-                        <outlet property="synchronizeFiles" destination="Rc4-nI-R1N" id="Nus-ni-pLH"/>
-                        <outlet property="usePassword" destination="L2G-nr-gi1" id="Qp0-vl-sBR"/>
+                        <outlet property="downloadTime" destination="gBR-8n-YBS" id="MEX-za-kph"/>
+                        <outlet property="useAutomatedDownload" destination="ZWA-MD-FE0" id="Gj6-fg-pAY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uUX-Tn-iSE" userLabel="First Responder" sceneMemberID="firstResponder"/>
